Top line of ChangeLog $Revision$, update below this line.

2004-08-19  Keith Sharp  <kms@passback.co.uk>

	* cong-edit-preferences.c:

	Callback / signal handler for CLOSE button. 

2004-08-16  David Malcolm  <dmalcolm@redhat.com>

	* xmledit.c, xmldata.c, cong-node.h, cong-node.c, cong-location.c, cong-editor-widget3.c, cong-editor-node.c, cong-edit-find-and-replace.c, cong-dom-view.c, cong-command.c:

	Added support for CDATA sections, generalising text editing code where necessary to support these (and some comment editing support where it seemed appropriate)

2004-08-14  David Malcolm  <david@davemalcolm.demon.co.uk>

	* popup.c, cong-menus.c: 

	Moved the Remove Span Tag submenu (but not its content) into the XML UI description

	* popup.c, cong-menus.c: 

	Moved the New Sibling/New Subelement submenus (but not their content) into the XML UI description

	* popup.c:

	Eliminated make_element_submenu function
	
	* popup.c, cong-menus.c: 

	Move context menu's Cut and Copy operation out of auto-generated code and into XML description

	* tree.c, popup.c, cong-ui-hooks.h:

	Replaced Document_Node_ParentWindow callbacks to Document_SelectedNode_ParentWindow

2004-08-13  David Malcolm  <david@davemalcolm.demon.co.uk>

	* popup.c, cong-ui-hooks.h: 

	Removed Document_DispspecElement_Node callbacks

	* cong-dom-view.c, cong-editor-area.c, cong-editor-node-text.c,
	cong-editor-widget.h, cong-editor-widget3.c, cong-menus.c,
	cong-overview-view.c, cong-overview-view.h, cong-primary-window.c,
	cong-primary-window.h, cong-tree-view.c, cong-tree-view.h,
	cong-ui-hooks.h, cong-util.c, cong-util.h, global.h, popup.c,
	tree.c: 

	First pass at a port of the context menu to the GtkAction API

2004-08-12  Geert Stappers  <stappers@stappers.nl>

	*  plugin-docbook.c

	Added a first book at creation time of a book set. (bug.g.o. #149305)

	Added a title at creation time of a book. (bugzilla.g.o. #149307)

2004-08-08  David Malcolm  <david@davemalcolm.demon.co.uk>

	* popup.c: 
