@@ -29,6 +29,10 @@
 #include "cong-dispspec.h"
 #include "cong-glade.h"
 
+#include "cong-plugin-manager.h"
+#include "cong-plugin.h"
+#include "cong-service.h"
+
 typedef struct CongPreferencesDialogDetails CongPreferencesDialogDetails;
 
 struct CongPreferencesDialogDetails
@@ -38,6 +42,9 @@ struct CongPreferencesDialogDetails
 
 static void 
 populate_dispspec_tree (CongPreferencesDialogDetails *dialog_details);
+
+static void 
+populate_plugin_tree (CongPreferencesDialogDetails *dialog_details);
 
 static void
 on_preferences_dialog_close (GtkButton *button,
@@ -74,9 +81,10 @@ cong_ui_hook_edit_preferences (GtkWindow *toplevel_window)
 	g_signal_connect (G_OBJECT (close),
 			  "clicked",
 			  G_CALLBACK (on_preferences_dialog_close),
-              dialog_details);
+			  dialog_details);
 
 	populate_dispspec_tree (dialog_details);
+	populate_plugin_tree (dialog_details);
 
 	/* Cleanup handler: */
 	g_signal_connect (G_OBJECT (dialog),
@@ -155,9 +163,123 @@ populate_dispspec_tree (CongPreferencesDialogDetails *dialog_details)
 				     column);
 }
 
+enum
+{
+	PLUGINLIST_NAME_COLUMN,
+	PLUGINLIST_DESCRIPTION_COLUMN,
+	PLUGINLIST_N_COLUMNS
+};
+
+struct add_service_data
+{
+	GtkTreeStore *store;
+	GtkTreeIter *plugin_iter;
+};
+
+static void
+add_service (CongService *service,
+	     gpointer user_data)
+{
+	struct add_service_data *add_service_data = (struct add_service_data *)user_data;
+	GtkTreeIter service_iter;
+
+	gtk_tree_store_append (add_service_data->store, &service_iter, add_service_data->plugin_iter);  /* Acquire an iterator */
+	
+	gtk_tree_store_set (add_service_data->store, &service_iter,
+			    PLUGINLIST_NAME_COLUMN, cong_service_get_id (service),
+			    PLUGINLIST_DESCRIPTION_COLUMN, cong_service_get_name (service),
+			    -1);
+}
+
+static void
+add_plugin (CongPlugin *plugin,
+	    gpointer user_data)
+{
+	GtkTreeStore *store = GTK_TREE_STORE (user_data);
+	GtkTreeIter plugin_iter;
+	struct add_service_data add_service_data;
+	
+	add_service_data.store = store;
+	add_service_data.plugin_iter = &plugin_iter;
+
+	gtk_tree_store_append (store, &plugin_iter, NULL);  /* Acquire an iterator */
+	
+	gtk_tree_store_set (store, &plugin_iter,
+			    PLUGINLIST_NAME_COLUMN, cong_plugin_get_id (plugin),
+			    -1);
+
+	cong_plugin_for_each_service (plugin, 
+				      add_service,
+				      &add_service_data);
+}
+
+static void 
+populate_plugin_tree (CongPreferencesDialogDetails *dialog_details)
+{
+	GtkTreeView* tree_view;
+	GtkTreeStore *store;
+	GtkTreeViewColumn *column;
+	GtkCellRenderer *renderer;
+
+	g_assert (dialog_details);
+
+	tree_view = GTK_TREE_VIEW (glade_xml_get_widget (dialog_details->xml, "treeview_plugins"));
+
+	store = gtk_tree_store_new (PLUGINLIST_N_COLUMNS, G_TYPE_STRING, G_TYPE_STRING);
+
+	gtk_tree_view_set_model (tree_view,
+				 GTK_TREE_MODEL (store));
+
+	/* The view now holds a reference.  We can get rid of our own
+	 * reference */
+	g_object_unref (G_OBJECT (store));
+
+	/* Populate the store based on the plugin manager: */
+	{
+#if 1
+		cong_plugin_manager_for_each_plugin (cong_app_get_plugin_manager (cong_app_singleton ()),
+						     add_plugin,
+						     store);
+#else
+		CongDispspecRegistry *registry = cong_app_get_dispspec_registry (cong_app_singleton ());
+		int i;
+
+		for (i=0; i<cong_dispspec_registry_get_num (registry); i++) {
+			const CongDispspec* ds = cong_dispspec_registry_get(registry,i);
+			
+			GtkTreeIter iter;
+			gtk_list_store_append (store, &iter);  /* Acquire an iterator */
+			
+			gtk_list_store_set (store, &iter,
+					    PLUGINLIST_NAME_COLUMN, cong_dispspec_get_name(ds),
+					    PLUGINLIST_DESCRIPTION_COLUMN, cong_dispspec_get_description(ds),
+					    -1);
+		}
+#endif
+	}
+
+	renderer = gtk_cell_renderer_text_new ();
+
+	column = gtk_tree_view_column_new_with_attributes (_("Name"), renderer,
+							   "text", PLUGINLIST_NAME_COLUMN,
+							   NULL);
+
+	/* Add the column to the view. */
+	gtk_tree_view_append_column (GTK_TREE_VIEW (tree_view), 
+				     column);
+
+	column = gtk_tree_view_column_new_with_attributes (_("Description"), renderer,
+							   "text", PLUGINLIST_DESCRIPTION_COLUMN,
+							   NULL);
+
+	/* Add the column to the view. */
+	gtk_tree_view_append_column (GTK_TREE_VIEW (tree_view), 
+				     column);
+}
+
 static void
 on_preferences_dialog_close (GtkButton *button,
-				   CongPreferencesDialogDetails *dialog_details)
+			     CongPreferencesDialogDetails *dialog_details)
 {
 	GtkWidget *dialog;
 
@@ -165,7 +287,6 @@ on_preferences_dialog_close (GtkButton *button,
 
 	dialog = glade_xml_get_widget (dialog_details->xml, "preferences_dialog");
 	gtk_widget_destroy (dialog);
-	g_free (dialog_details);
 }
 
 static gboolean
